# nyxus

./: .codespellrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  LinuxWheelBuilder  MANIFEST.in  README.md  build-docker.sh  build-wheels-mac.sh  build-wheels.sh  codespellignore.txt  dirs_and_files.cpp  environment.yml  f_circle.cpp  f_euler_number.cpp  f_particle_metrics.cpp  features.cpp  histogram.h  install_win_nyxus.bat  install_win_prereq.bat  main.cpp  output.cpp  parallel.cpp  plugin.json  publish_docker.yml  pyproject.toml  pytest.ini  readMe.txt  rebuild.sh  release-please-config.json  run-hamda.sh  run-j.sh  run-jayapria.sh  (+13 more)
tests/: CMakeLists.txt  CMakeLists.txt.gtest  download_data.py  testAll.cc  testDummy.h  test_2d_geometric_moments.h  test_2d_remaining_features.h  test_3d_coverage_common.h  test_3d_feature_coverage.h  test_3d_firstorder_coverage.h  test_3d_firstorder_pyradiomics.h  test_3d_glcm.h  test_3d_glcm_coverage.h  test_3d_glcm_pyradiomics.h  test_3d_gldm.h  test_3d_gldm_coverage.h  test_3d_gldm_pyradiomics.h  test_3d_gldzm.h  test_3d_gldzm_coverage.h  test_3d_gldzm_ibsi.h  test_3d_glrlm.h  test_3d_glrlm_coverage.h  test_3d_glrlm_pyradiomics.h  test_3d_glszm.h  test_3d_glszm_coverage.h  test_3d_glszm_pyradiomics.h  test_3d_inten.h  test_3d_morphology_common.h  test_3d_morphology_coverage.h  test_3d_morphology_matlab.h  test_3d_morphology_regression.h  test_3d_ngldm.h  test_3d_ngldm_coverage.h  test_3d_ngldm_ibsi.h  test_3d_ngldm_regression.h  test_3d_ngtdm.h  test_3d_ngtdm_coverage.h  test_3d_ngtdm_pyradiomics.h  test_3d_nifti.h  test_3d_nifti_mechanics.h  (+88 more)
tests/data/: fractal_blob512_seg.ome.tif
tests/data/hounsfield/: README.md  ct3d_int16.nii  ct_float.tif  ct_i16.dcm  ct_int16.tif  ct_small_hu.tif  ct_small_mask.tif  ct_u16.dcm  make_ct_small_hu_fixture.py  make_dicom_fixtures.py  make_fixtures.py  make_nifti_fixtures.py  mask.tif  mask3d.nii
tests/data/nifti/compat_int/: compat_int_ngtdm_3d.nii
tests/data/nifti/compat_seg/: compat_seg_ngtdm_3d.nii
tests/data/nifti/phantoms/: 2torus.nii  ut_inten.nii  ut_mask57.nii
tests/data/ometiff/: bad_corrupt.tif  bad_rgb.ome.tif  dim2_yx.ome.tif  dim3_emptymask.ome.tif  dim3_mask.ome.tif  dim3_plain.tif  dim3_zyx.ome.tif  dim4_czyx.ome.tif  dim4_mask_c2.ome.tif  dim4_tzyx.ome.tif  dim5.ome.tif  dim5_badifd.ome.tif  dim5_calibrated.ome.tif  dim5_calibrated_nm.ome.tif  dim5_ctzyx.ome.tif  dim5_cztyx.ome.tif  dim5_multitile.ome.tif  dim5_oddtile.ome.tif  dim5_pyramid.ome.tif  dim5_reordered.ome.tif  dim5_tiled.ome.tif  dim5_tzcyx.ome.tif  dim5_zctyx.ome.tif  dim5_ztcyx.ome.tif  gen_ome_tiff.py
tests/data/omezarr/: README.md  gen_dim5.py
tests/data/omezarr/bad_axes_count.ome.zarr/: .zattrs
tests/data/omezarr/bad_no_xy.ome.zarr/: .zattrs
tests/data/omezarr/bad_no_xy.ome.zarr/0/: .zarray
tests/data/omezarr/dim2_yx.ome.zarr/: .zattrs
tests/data/omezarr/dim2_yx.ome.zarr/0/: .zarray
tests/data/omezarr/dim3_mask.ome.zarr/: .zattrs
tests/data/omezarr/dim3_mask.ome.zarr/0/: .zarray  1.0.0
tests/data/omezarr/dim3_zyx.ome.zarr/: .zattrs
tests/data/omezarr/dim3_zyx.ome.zarr/0/: 1.0.0  2.0.0  3.0.0
tests/data/omezarr/dim4_czyx.ome.zarr/: .zattrs
tests/data/omezarr/dim4_czyx.ome.zarr/0/: .zarray  0.0.0.0  0.1.0.0  0.2.0.0  0.3.0.0
tests/data/omezarr/dim4_tzyx.ome.zarr/: .zattrs
tests/data/omezarr/dim4_tzyx.ome.zarr/0/: .zarray  0.0.0.0  0.1.0.0  0.2.0.0  0.3.0.0
tests/data/omezarr/dim5.ome.zarr/: .zattrs
tests/data/omezarr/dim5.ome.zarr/0/: 0.0.0.0.0
tests/data/omezarr/dim5_calibrated.ome.zarr/: .zattrs
tests/data/omezarr/dim5_calibrated_nm.ome.zarr/: .zattrs
tests/data/omezarr/dim5_calibrated_nm.ome.zarr/0/: 0.0.2.0.0
tests/data/omezarr/dim5_ctzyx.ome.zarr/: .zattrs
tests/data/omezarr/dim5_ctzyx.ome.zarr/0/: .zarray  0.0.1.0.0
tests/data/omezarr/dim5_cztyx.ome.zarr/: .zattrs
tests/data/omezarr/dim5_cztyx.ome.zarr/0/: .zarray  0.3.0.0.0
tests/data/omezarr/dim5_multichunk.ome.zarr/0/: .zarray  0.0.0.0.0  0.0.0.0.1  0.0.0.1.0  0.0.0.1.1  0.0.1.0.0  0.0.1.0.1  0.0.1.1.0  0.0.1.1.1  (+88 more)
tests/data/omezarr/dim5_noaxes.ome.zarr/: .zattrs
tests/data/omezarr/dim5_tzcyx.ome.zarr/: .zattrs
tests/data/omezarr/dim5_v3_sharded.ome.zarr/: zarr.json
tests/data/omezarr/dim5_zctyx.ome.zarr/: .zattrs
tests/data/omezarr/dim5_ztcyx.ome.zarr/: .zattrs
tests/data/omezarr/multi.ome.zarr/: .zattrs  .zmetadata
tests/data/omezarr/test.ome.zarr/: .zattrs  .zmetadata
tests/oracle/: .gitignore  README.md  gen_oracle_masks.py
tests/python/: test_convex_hull_invariants.py  test_convex_hull_oracle.py  test_covered_intensity_range_regression.py  test_data.py  test_download_data.py  test_dummy.py  test_feature_bugs.py  test_feature_oracle.py  test_feature_results.py  test_fractal_dim_oracle.py  test_glcm_oracle.py  test_gldm_bugs.py  test_gldm_pyradiomics.py  test_hounsfield.py  test_hounsfield_nifti.py  test_hu_ct_small_pydicom.py  test_import.py  test_intensity_histogram.py  test_neighbors_oracle.py  test_nyxus.py  test_ooc_mechanics.py  test_physical_calibration_regression.py  test_signed_int16_loader.py  test_tiff_loader.py  test_tissuenet_data.py  test_vetting_coverage.py  test_write_data.py
tests/python/data/int/: p0_y1_r1_c0.ome.tif  p0_y1_r1_c1.ome.tif
tests/python/data/seg/: p0_y1_r1_c0.ome.tif  p0_y1_r1_c1.ome.tif
tests/vetting/: MIGRATION.md  README.md  SPEC.md  TOOLS.md  check_coverage.py  config_recipes.md  coverage_report.md  oracle_coverage.csv
tests/vetting/audit/: .gitignore  TEST_VETTING_REPORT.md  audit_1.txt  audit_2.txt  audit_3.txt  audit_4.txt  candidate_oracles.py  extract_features.py  merge.py  report.py  scan_tests.py  vetting_report.csv
tests/vetting/matrix/: glcm.md
tests/vetting/oracles/: gen_gabor_skimage.py  gen_geomoments_analytic.py  gen_glcm_pyradiomics.py  gen_imq_analytic.py  gen_moments_skimage.py  gen_morphology_skimage.py  gen_neighbor_analytic.py  gen_neighbor_cellprofiler.py
tests/vetting/oracles/fraclac/: ref_boxcount.py  shiftgrid_boxcount.ijm
(+651 files in other folders)
